--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     restart: always
 
   wordpress:
-    image: wordpress:php7.2-fpm
+    image: eandrewswhoi/whoi-wordpress-nginx:latest
     container_name: wordpress
     volumes:
       - ./wordpress:/var/www/html
